Both html and css had to be edited quite a bit for the menu bar to work better--with my name at the top and the links in a line on the left.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
     <header>
-        <h1 class="my-name">Angelina Richardson</h1>
-        <ul class="menu">
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#my-work">My Work</a></li>
-            <li><a href="#my-contact-info">Contact Info</a></li>
+        <ul class="navbar">
+            <p id="my-name">Angelina Richardson</p>
+            <a href="#about-me">About Me</a>
+            <a href="#my-work">My Work</a>
+            <a href="#my-contact-info">Contact Info</a>
         </ul>  
     </header>
     <figure class="background-photo"></figure>
