I worked for hours redoing the css file from the beginning. I found that I was adding unnecessary additions that were making the assignment more difficult than necessary.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
 </head>
 
 <body>
-    <header>
-        <ul class="navbar">
-            <p id="my-name">Angelina Richardson</p>
-            <a href="#about-me">About Me</a>
-            <a href="#my-work">My Work</a>
-            <a href="#my-contact-info">Contact Info</a>
-        </ul>  
+    <header id="navbar">
+        <p id="my-name">Angelina Richardson</p>
+        <a href="#about-me">About Me</a>
+        <a href="#my-work">My Work</a>   
+        <a href="#my-contact-info">Contact Info</a> 
     </header>
-    <figure class="background-photo"></figure>
-
+    <!-- <figure class="background-photo"></figure> -->
+    <section id="section-1">
+        <h1 id="about-me">About Me</h1>
+        <img id="my-pic" src="../Profile Photo.JPG" alt="This is what I look like!"></img>
+        <p id="about-me-p">Here is a picture of me! My name is Angelina Richardson, and it is nice to meet you! I was born in Japan, and moved to the United States with my parents when I was two years old.</p>
+    </section>
+    <section id="section-2">
+        <h1 id="my-work">My Work</h1>
+        <p>Challenge 1</p>
+        <a href="../challenge-Jun-16/" target="_blank">
+            <img src="../Horiseon Screenshot but somehow the navbar in the screenshot is messed up even though the website is right.png" alt="Here is a screenshot of my first challenge."></img>
+        </a>
+    </section>
 </body>
 
 </html>
