Completed assignment with Contact Info. Added links to email and LinkedIn.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <img src="../Horiseon Screenshot but somehow the navbar in the screenshot is messed up even though the website is right.png" alt="Here is a screenshot of my first challenge."></img>
         </a>
     </section>
+    <section id="section-3">
+        <h1 id="my-contact-info">Contact Info</h1>
+        <p id="email">Email:</p>
+        <a href="mailto:angelinarair33@gmail./com" target="_blank" alt="Here is a link to compose a new message to me via email.">angelinarair33@gmail.com</a>
+        <p id="linked-in">LinkedIn:</p>
+        <a href="https://www.linkedin.com/in/angelina-richardson-9b9841217/" target="_blank" alt="Here is a link to my LinkedIn profile page.">LinkedIn Profile</a>
+    </section>
 </body>
 
 </html>
