Had to put images into an images directory within a new directory assets and change the ref links to accomodate for the changes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>AIR Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -15,14 +15,14 @@
     </header>
     <section id="section-1">
         <h1 id="about-me">About Me</h1>
-        <img id="my-pic" src="../Profile Photo.JPG" alt="This is what I look like!"></img>
+        <img id="my-pic" src="./assets/images/Profile Photo.JPG" alt="This is what I look like!"></img>
         <p id="about-me-p">Here is a picture of me! My name is Angelina Richardson, and it is nice to meet you! I was born in Japan, and moved to the United States with my parents when I was two years old.</p>
     </section>
     <section id="section-2">
         <h1 id="my-work">My Work</h1>
         <p>Challenge 1</p>
         <a href="../challenge-Jun-16/" target="_blank">
-            <img src="../Horiseon Screenshot but somehow the navbar in the screenshot is messed up even though the website is right.png" alt="Here is a screenshot of my first challenge."></img>
+            <img src="./assets/images/Horiseon Screenshot but somehow the navbar in the screenshot is messed up even though the website is right.png" alt="Here is a screenshot of my first challenge."></img>
         </a>
     </section>
     <section id="section-3">
